// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlayingButton when not playing renders as expected 1`] = `
<WithStyles(IconButton)
  aria-label="Playing"
  onClick={[Function]}
>
  <pure(CheckCircleOutlineIcon)
    className="test"
  />
</WithStyles(IconButton)>
`;

exports[`PlayingButton when playing renders as expected 1`] = `
<WithStyles(IconButton)
  aria-label="Playing"
  onClick={[Function]}
>
  <pure(CheckCircleTwoToneIcon)
    className="test"
    color="primary"
  />
</WithStyles(IconButton)>
`;
